<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/str_txtTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tbl_tictactoe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_11"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_12"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_13"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_21"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_22"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_23"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_31"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_32"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btn_33"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="#C5C7C9"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                app:cornerRadius="0dp"
                app:strokeColor="#000000"
                app:strokeWidth="1dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/lbl_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_txtStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbl_tictactoe" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_btnReset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_tictactoe_Players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_btnTicTacToeIdPlayer"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset" />

    <Button
        android:id="@+id/btn_tictactoeScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/str_btnTicTacToeScoresTable"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_tictactoe_Players"
        app:layout_constraintEnd_toEndOf="@+id/btn_tictactoe_Players"
        app:layout_constraintStart_toStartOf="@+id/btn_tictactoe_Players" />
</androidx.constraintlayout.widget.ConstraintLayout>